Added Function to save gambas native values and Load them as ShmMem Variables
* OPT: Cleanup examples
* OPT: Update for publishing on Gambas FarmServer
* OPT: Update internal documentation
* NEW: Added Function SaveNativeVar(ShmMem_Name as string, Value as variant,Optional FileName as string)
* NEW: Added Close method to shmmem that must be called when program exits
* BUG: Circular ref and unreleased blocks, fixed by close call in shmmem
* BUG: Fix variaous seg faults, verify memory before _free

--- a/.project
+++ b/.project
@@ -31,6 +31,6 @@ Groups=mageia:"System/Libraries"
 Groups=slackware:"Development/Libraries"
 Groups=suse:"Development/Libraries/Other"
 Groups=ubuntu:"libs"
-Tags=System,Utility
+Tags=System,Utility,WebDevelopment
 GambasVersion=3.19
 WebSite=https://github.com/justlostintime/ShmMem/wiki
