--- a/.settings
+++ b/.settings
@@ -4,7 +4,7 @@ ShmNotifyEntry=[54]
 ShmValue=[88]
 
 [Debug]
-Breakpoints={}
+Breakpoints={"ShmThread":[47,54,57,56,32],"TestExecutableBlocks":[15,23]}
 UseTerminal=False
 RedirectStderr=False
 UseHttpServer=False
@@ -316,7 +316,7 @@ Geometry=[834,415,252,250]
 Geometry=[834,512,252,56]
 
 [DebugWindow/Value]
-Geometry=[2224,387,316,504]
+Geometry=[834,512,252,56]
 
 [DebugWindow/ValueDef]
 Geometry=[834,445,503,231]
@@ -333,6 +333,9 @@ Geometry=[834,498,252,56]
 [DebugWindow/VarMem]
 Geometry=[834,512,252,56]
 
+[DebugWindow/VarMem.varptr(SymMem.Table[index].Address)]
+Geometry=[834,512,252,56]
+
 [DebugWindow/VarStorage]
 Geometry=[834,465,252,150]
 
@@ -340,7 +343,7 @@ Geometry=[834,465,252,150]
 Geometry=[834,402,252,276]
 
 [DebugWindow/a]
-Geometry=[2339,365,252,511]
+Geometry=[834,498,252,58]
 
 [DebugWindow/a.Bounds]
 Geometry=[2144,300,252,504]
@@ -700,7 +703,7 @@ Geometry=[2237,369,252,504]
 Geometry=[2237,369,252,504]
 
 [DebugWindow/srcstr]
-Geometry=[2664,390,339,339]
+Geometry=[834,512,252,56]
 
 [DebugWindow/subs]
 Geometry=[834,388,252,276]
@@ -742,7 +745,10 @@ Geometry=[1025,260,540,423]
 Geometry=[1039,274,252,504]
 
 [DebugWindow/tmpptr]
-Geometry=[2754,498,252,56]
+Geometry=[834,512,252,56]
+
+[DebugWindow/tmpptr.Value]
+Geometry=[834,512,252,56]
 
 [DebugWindow/tmpshm]
 Geometry=[834,498,252,56]
@@ -832,18 +838,18 @@ Diagonals=0
 Lock=False
 
 [FProjectVersion]
-LastCommit="Fix Export and import to allow any type of array content\n\n* NEW: add ObjectAsHex and OjectFromHex to ShmVarStorage, allows creation of files and send of objects\n* OPT: Cleanup examples\n* OPT: Update for publishing on Gambas FarmServer\n* OPT: Update internal documentation\n* NEW: Added Function SaveNativeVar(ShmMem_Name as string, Value as variant,Optional FileName as string)\n* NEW: Added Close method to shmmem that must be called when program exits\n* BUG: Circular ref and unreleased blocks, fixed by close call in shmmem\n* BUG: Fix variaous seg faults, verify memory before _free"
+LastCommit="Add information files to project for used external c interface files\n\n* NEW: add ObjectAsHex and OjectFromHex to ShmVarStorage, allows creation of files and send of objects\n* OPT: Cleanup examples\n* OPT: Update for publishing on Gambas FarmServer\n* OPT: Update internal documentation\n* NEW: Added Function SaveNativeVar(ShmMem_Name as string, Value as variant,Optional FileName as string)\n* NEW: Added Close method to shmmem that must be called when program exits\n* BUG: Circular ref and unreleased blocks, fixed by close call in shmmem\n* BUG: Fix variaous seg faults, verify memory before _free"
 
 [OpenFile]
 Count=7
-File[1]=".src/Server/ServerMain.module:78.45"
-Active=4
-File[2]=".src/Server/DaemonChild.class:8.79"
-File[3]=".src/ShmMem/shmMem.class:0.0"
-File[4]=".src/ShmMem/ShmMemBlock.class:43.33"
-File[5]=".src/ShmMem/ShmSymbolTable.class:0.0"
-File[6]=".src/ShmMem/ShmManage.class:4.466"
-File[7]=".src/ShmMem/ShmVarStorage.class:47.162"
+File[1]=".src/ShmMem/shmMem.class:17.612"
+Active=6
+File[2]=".src/Examples/vTestApps/General Tests/TestExecutableBlocks.module:22.23"
+File[3]=".src/ShmMem/ShmMemBlock.class:0.208"
+File[4]="H.files/pthread.h:31.213"
+File[5]=".src/ShmMem/ShmThread.class:33.57"
+File[6]="templates/pthread.asm:5.20"
+File[7]=".src/ShmMem/ShmManage.class:0.118"
 
 [Package]
 Dir="~/Projects/Distribution/ShmMem/"
