--- a/.settings
+++ b/.settings
@@ -838,12 +838,12 @@ Diagonals=0
 Lock=False
 
 [FProjectVersion]
-LastCommit="Add information files to project for used external c interface files\n\n* NEW: add ObjectAsHex and OjectFromHex to ShmVarStorage, allows creation of files and send of objects\n* OPT: Cleanup examples\n* OPT: Update for publishing on Gambas FarmServer\n* OPT: Update internal documentation\n* NEW: Added Function SaveNativeVar(ShmMem_Name as string, Value as variant,Optional FileName as string)\n* NEW: Added Close method to shmmem that must be called when program exits\n* BUG: Circular ref and unreleased blocks, fixed by close call in shmmem\n* BUG: Fix variaous seg faults, verify memory before _free"
+LastCommit="New addition od executable shared memory segments, see included examples\n\n* NEW: Extend shared block to allow executable block, direct implementation jit code generation\n* NEW: add ObjectAsHex and OjectFromHex to ShmVarStorage, allows creation of files and send of objects\n* OPT: Cleanup examples\n* OPT: Update for publishing on Gambas FarmServer\n* OPT: Update internal documentation\n* NEW: Added Function SaveNativeVar(ShmMem_Name as string, Value as variant,Optional FileName as string)\n* NEW: Added Close method to shmmem that must be called when program exits\n* BUG: Circular ref and unreleased blocks, fixed by close call in shmmem\n* BUG: Fix variaous seg faults, verify memory before _free"
 
 [OpenFile]
 Count=7
 File[1]=".src/ShmMem/shmMem.class:17.612"
-Active=6
+Active=5
 File[2]=".src/Examples/vTestApps/General Tests/TestExecutableBlocks.module:22.23"
 File[3]=".src/ShmMem/ShmMemBlock.class:0.208"
 File[4]="H.files/pthread.h:31.213"
