--- a/.settings
+++ b/.settings
@@ -4,7 +4,7 @@ ShmNotifyEntry=[54]
 ShmValue=[88]
 
 [Debug]
-Breakpoints={"TestExecutableBlocks":[50]}
+Breakpoints={"TestExecutableBlocks":[53,47]}
 UseTerminal=False
 RedirectStderr=False
 UseHttpServer=False
@@ -838,15 +838,14 @@ Diagonals=0
 Lock=False
 
 [FProjectVersion]
-LastCommit="New addition od executable shared memory segments, see included examples\n\n* NEW: Examples of Executable segment , pass string, value and structure to thread\n* NEW: Extend shared block to allow executable block, direct implementation jit code generation\n* NEW: add ObjectAsHex and OjectFromHex to ShmVarStorage, allows creation of files and send of objects\n* OPT: Cleanup examples\n* OPT: Update for publishing on Gambas FarmServer\n* OPT: Update internal documentation\n* NEW: Added Function SaveNativeVar(ShmMem_Name as string, Value as variant,Optional FileName as string)\n* NEW: Added Close method to shmmem that must be called when program exits\n* BUG: Circular ref and unreleased blocks, fixed by close call in shmmem\n* BUG: Fix variaous seg faults, verify memory before _free"
+LastCommit="New addition od executable shared memory segments, see included examples\n\n* OPT: Updated buildCStruct to do a dissasemble of the generated code\n* NEW: Added c example of binary executable thread blob\n* NEW: Examples of Executable segment , pass string, value and structure to thread\n* NEW: Extend shared block to allow executable block, direct implementation jit code generation\n* NEW: add ObjectAsHex and OjectFromHex to ShmVarStorage, allows creation of files and send of objects\n* OPT: Cleanup examples\n* OPT: Update for publishing on Gambas FarmServer\n* OPT: Update internal documentation\n* NEW: Added Function SaveNativeVar(ShmMem_Name as string, Value as variant,Optional FileName as string)\n* NEW: Added Close method to shmmem that must be called when program exits\n* BUG: Circular ref and unreleased blocks, fixed by close call in shmmem\n* BUG: Fix variaous seg faults, verify memory before _free"
 
 [OpenFile]
-Count=4
-File[1]=".src/Examples/vTestApps/General Tests/TestExecutableBlocks.module:20.55"
-Active=1
-File[2]="H.files/pthread.h:31.213"
-File[3]=".src/ShmMem/ShmThread.class:5.57"
-File[4]="templates/pthreadStruct.c:6.6"
+Count=3
+File[1]="templates/buildC:0.6"
+Active=3
+File[2]="templates/pthreadStruct.c:13.80"
+File[3]=".src/Examples/vTestApps/General Tests/TestExecutableBlocks.module:22.50"
 
 [Package]
 Dir="~/Projects/Distribution/ShmMem/"
