--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#---- Gambas files to ignore (v7)
+#---- Gambas files to ignore (v8)
 *.gambas
 .lock
 *~
@@ -12,6 +12,7 @@ vgcore.*
 .gambas/*
 .settings
 .startup
+.environment
 .list
 .info
 .fuse_hidden*
